<resources>
    <string name="app_name">Olimpia</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="nombre_usuario">Nombre</string>
    <string name="cedula_usuario">Cedula</string>
    <string name="dirrecion_usuario">Dirrección</string>
    <string name="celular_usuario">Celular</string>
    <string name="btn_siguiente">Siguiente</string>
    <string name="ciudad_usuario">Ciudad</string>
    <string name="pais_usuario">Pais</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="foto_usuario">Foto Usuario</string>

    <string name="message_error">El campo no puede estar vacio</string>
    <string name="ubicacion_usuario">Tu ubicación</string>

    <string name="google_maps_key">AIzaSyA8l2DjUiKLbemNUBKgWLI2lHeTJU6zM5E</string>
    <string name="map_buscar">Buscando coordenadas...</string>
    <string name="mensaje_esperarResAlarma">Enviando mensaje de texto</string>
    <string name="mensaje_esperaTiempo">Se esta enviando el mensaje de texto por favor espere.</string>
    <string name="mensaje_advertencia">Advertencia</string>
    <string name="mensajeToast_menEnviado">El mensaje fue enviado</string>
    <string name="mensajeToast_fallo_envio">El envio fallo</string>
    <string name="mensajeToast_noServicio">No hay servicio SMS</string>
    <string name="mensajeToast_noPdu">No hay PDU</string>
    <string name="mensajeToast_menEntregadoOpe">El mensaje fue entregado al operador</string>
    <string name="mensajeToast_menNoEntregadoOpe">El emnsaje no se pudo entregar al operador</string>
    <string name="mensaje_NoConfirma">No confirma</string>
    <string name="check_sms">Enviar confirmacion por SMS</string>
    <string name="guardar_datos">Guardar dato en web service</string>
    <string name="btn_guardar">Guardar datos</string>
    <string name="mensaje_datosOK">Los datos fueron cargados en la base de datos</string>
</resources>
